package music.notes.pitch;

public enum IntervalDirection {
    UP, DOWN, STEADY
}
